hw05/test/zm-newFloatArray-exp-error.fmj
public int main() {
  float [] n;
  float [] n2;
  n = new float[n2]; // error
  return n[0];
}